# EmbeddedIntentRecognizer

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: intent-recognizer.cfg.in
data/english-dataSet/: data-set1  data-set2  data-set3  data-set4  data-set5
docs/: CMakeLists.txt  main.dox
src/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  EmbeddedIntentRecognizer.cpp  EmbeddedIntentRecognizer.hpp  InputStrategyContext.cpp  InputStrategyContext.hpp  TextProcessor.cpp  TextProcessor.hpp  main.cpp
src/common/: Types.hpp
src/concrete-input-language-strategies/: CliEnglishInput.cpp  CliEnglishInput.hpp
src/concrete-input-strategies/: CliInput.cpp  CliInput.hpp  TouchScreenInput.cpp  TouchScreenInput.hpp  VoiceInput.cpp  VoiceInput.hpp
src/concrete-output-language-strategies/: CliEnglishOutput.cpp  CliEnglishOutput.hpp
src/intent-recognition-models/: EnglishLanguageModel.cpp  EnglishLanguageModel.hpp
src/interfaces/: IInputLanguageStrategy.hpp  IInputStrategy.hpp  IIntentRecognitionModel.hpp  IOutputDevice.hpp  IOutputLanguageStrategy.hpp  ITextProcessorOutputObserver.hpp
src/output-devices/: CliOutput.cpp  CliOutput.hpp  TouchScreenOutput.cpp  TouchScreenOutput.hpp  VoiceOutput.cpp  VoiceOutput.hpp
tests/: CMakeLists.txt  ConfigManagerTest.cpp  EmbeddedIntentRecognizerTest.cpp  EnglishLanguageModelTest.cpp  InputStrategiesTest.cpp  OutputDevicesTest.cpp  TextProcessorTest.cpp  main.cpp
tests/stubs/: StubTextProcessorOutputObserver.hpp
tests/test-artifacts/: invalid-format1.cfg  invalid-format2.cfg  invalid-format3.cfg  invalid-format4.cfg  valid-format2.cfg  valid-format3.cfg  valid-format4.cfg
unit-tests/: CMakeLists.txt
